--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "@types/lodash": "^4.14.191",
+    "@types/node": "^18.15.5",
     "@types/ramda": "^0.28.23",
     "lodash": "^4.17.21",
-    "ramda": "^0.28.0"
+    "ramda": "^0.28.0",
+    "rxjs": "^7.8.0",
+    "ts-node": "^10.9.1"
   }
 }
